# uc3-drosophola-genetics

./: .env3  .env4  .gitignore  <- extent(c(min(lon),max(lon),min(lat), max(lat)))  NSAT20150909_timeless.txt  README.md  ource = "stadia")  temp_col.csv
DrosoEnvironmentTest/: main.sh
DrosoEnvironmentTest/results/: Plot_pvalues.R  metadata.csv
DrosoEnvironmentTest/scripts/: VCF2AF.py
SideProjectCopernicus/: London_20220801_temperature.nc  New York_20220801_temperature.nc  Paris_20220801_temperature.nc  TestCDSapi.py  TestCDSapi_nowdownload.py  TestRequestCOP.py  combined_temperature.nc
data/raw/: Europe_50kMutations_t_class.csv  Europe_50kMutations_t_class10.csv  Europe_50kMutations_t_class20.csv
docs/: theo
projects/: EggDanceSolutionApproach.txt
projects/ClimateData/: Env.csv
projects/EggTest/: EggTest.py  README.md  main.sh
projects/LandscapeGenomicsPipeline/: LandscapeGenomics.sh  LandscapeGenomics_qsub.sh  README.md  RunLandscapeGenomics.sh  executeLGP.sh  main.sh
projects/MapSamples/: MakeSamples.R
projects/PlotRaster/: NSAT20150909_timeless.nc  RasterMaps.r
projects/QueryCube/: LICENSE  README.md  WormpickerEnv.yml  pyproject.toml
projects/QueryCube/code/: GetLayers_Window.py  UserCred.py  __init__.py  module_crs_converter.py  shiftfunc.py
projects/QueryCube/data/: NullValues_05_12_24.csv
projects/QueryCube/example_use/example_input/: samplesfile.csv
projects/QueryCube/example_use/example_results/: WormpickerResult.csv
projects/ViennaCityFly2004/: SPARTACUS - Spatial Dataset for Climate in Austria Datensatz_20230301_20240301.nc  (+3 more)
(+377 files in other folders)
