[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WormPicker_ssteindl"
version = "0.0.1"
authors = [
  { name="Sonja Steindl", email="sonja.steind@nhm-wien.ac.at" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = "https://github.com/FAIRiCUBE/uc3-drosophola-genetics/tree/main/projects/wormpicker"